# slack-chat-migrator

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SECURITY.md  config.yaml.example  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_permissions.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  deploy-site.yml  python-publish.yml  release.yml
site/: README.md  astro.config.mjs  package.json  tsconfig.json
site/src/components/: CopyButton.tsx  FAQ.astro  Features.astro  FinalCTA.astro  Footer.astro  Hero.astro  HowItWorks.astro  Navbar.astro  ProblemStatement.astro  QuickStart.astro  TerminalDemo.tsx  ThemeToggle.tsx
site/src/layouts/: Layout.astro
site/src/pages/: index.astro
site/src/styles/: global.css
slack_migrator/: __init__.py  __main__.py  constants.py  exceptions.py  types.py
slack_migrator/cli/: __init__.py  cleanup_cmd.py  commands.py  common.py  migrate_cmd.py  permission.py  permissions_cmd.py  report.py  validate_cmd.py
slack_migrator/core/: __init__.py  channel_processor.py  checkpoint.py  cleanup.py  config.py  context.py  migration_logging.py  migrator.py  state.py
slack_migrator/services/: __init__.py  chat_adapter.py  discovery.py  drive_adapter.py  file.py  file_download.py  file_permissions.py  historical_membership.py  membership_manager.py  message.py  message_attachments.py  message_builder.py  message_sender.py  reaction_processor.py  regular_membership.py  space.py  space_creator.py  user.py  user_resolver.py
slack_migrator/services/chat/: __init__.py  chat_uploader.py  dry_run_service.py
slack_migrator/services/drive/: __init__.py  drive_uploader.py  dry_run_service.py  folder_manager.py  shared_drive_manager.py
slack_migrator/utils/: __init__.py  api.py  formatting.py  logging.py  mime.py  permissions.py  user_validation.py
src/slack_chat_migrator/: __init__.py  __main__.py  constants.py
src/slack_chat_migrator/cli/: __init__.py  cleanup_cmd.py  commands.py  common.py  init_cmd.py  migrate_cmd.py  permissions_cmd.py  report.py  setup_cmd.py  validate_cmd.py
src/slack_chat_migrator/core/: __init__.py  channel_processor.py  checkpoint.py  cleanup.py  config.py  context.py  migration_logging.py  migrator.py  progress.py  state.py
src/slack_chat_migrator/services/: chat_adapter.py  export_inspector.py  file.py  message_builder.py  message_sender.py  regular_membership.py  space_creator.py  user.py  user_resolver.py
src/slack_chat_migrator/utils/: api.py  formatting.py  logging.py  mime.py  permissions.py  user_validation.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_bot_filtering.py  test_checkpoint_resume.py  test_config_interactions.py  test_dry_run_contracts.py  test_error_injection.py  test_error_recovery.py  test_message_shapes.py  test_migrate_dry_run.py  test_payload_assertions.py  test_validate_cli.py
tests/unit/: __init__.py  conftest.py  test_api_utils.py  test_channel_processor.py  test_chat_adapter.py  test_chat_uploader.py  test_checkpoint.py  test_cleanup.py  test_cli.py  test_config.py  test_context.py  test_discovery.py  test_drive_adapter.py  test_drive_uploader.py  test_dry_run_services.py  test_encoding.py  test_exceptions.py  test_export_inspector.py  test_file.py  test_folder_manager.py  test_formatting.py  test_init_cmd.py  test_logging.py  test_main.py  test_message.py  test_message_attachments.py  test_migration_logging.py  test_migrator.py  test_permissions.py  test_progress.py  test_renderers.py  test_report.py  test_setup_services.py  test_shared_drive_manager.py  test_space.py  test_state.py  test_user.py  test_user_resolver.py  test_user_validation.py
(+28 files in other folders)
